# PAOO

Proiect/src/: CMakeLists.txt  main.cpp
Proiect/src/clasa1/: AnotherDevice.hpp  CMakeLists.txt  Device.cpp  Device.hpp  DeviceInterface.hpp  Telefon.cpp  Telefon.hpp
Proiect/src/libs/: CMakeLists.txt  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp
Proiect/src/libs/AndroidDevice/: AndroidDevice.cpp  AndroidDevice.hpp  CMakeLists.txt
Proiect/src/libs/Device/: CMakeLists.txt  Device.hpp
Proiect/src/libs/Smartphone/: CMakeLists.txt  Smartphone.cpp  Smartphone.hpp
Proiect/src/libs/Tablet/: CMakeLists.txt
lab2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
lab2/Step2/: CMakeLists.txt  tutorial.cxx
lab2/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
